# apotek-tools

./: .gitignore  Makefile  README.md  main.py  pyproject.toml  setup_uv.sh
apotek_tools/: __init__.py  __main__.py  api.py  cli.py  config.py  excel_generator.py  fetcher.py
